--- a/src/components/common/Button/Button.mdx
+++ b/src/components/common/Button/Button.mdx
@@ -11,13 +11,13 @@ import * as ButtonStories from "./Button.stories";
 
 ## Props
 
-### Variant props
+### variant props
 
 - `버튼 배경색`을 정의하는 props로, `variant` props로 지정할 수 있습니다.
 
 <Canvas of={ButtonStories.VariantProps} />
 
-### Size props
+### size props
 
 - `버튼 크기`를 정의하는 props로, `size` props로 지정할 수 있습니다.
 
