--- a/src/components/common/Button/Button.mdx
+++ b/src/components/common/Button/Button.mdx
@@ -7,19 +7,19 @@ import * as ButtonStories from "./Button.stories";
 
 ## Overview
 
-버튼은 클릭을 통해 사용자에게 액션을 제공하는 컴포넌트입니다.
+Button은 클릭을 통해 사용자에게 액션을 제공하는 컴포넌트입니다.
 
 ## Props
 
 ### variant props
 
-- `버튼 배경색`을 정의하는 props로, `variant` props로 지정할 수 있습니다.
+- `Button 배경색`을 정의하는 props로, `variant` props로 지정할 수 있습니다.
 
 <Canvas of={ButtonStories.VariantProps} />
 
 ### size props
 
-- `버튼 크기`를 정의하는 props로, `size` props로 지정할 수 있습니다.
+- `Button 크기`를 정의하는 props로, `size` props로 지정할 수 있습니다.
 
 <Canvas of={ButtonStories.SizeProps} />
 
